# email-verify

./: README.md  ci.yml  config.py  core.py  publish.yml  pyproject.toml  test_email_verify.py
.github/workflows/: ci.yml  publish.yml
src/email_verify/: batch.py  cli.py  output.py
